k8s/manifests-bd2e6e/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-bd2e6e
  namespace: journee
  labels:
    app: journee-bd2e6e
spec:
  replicas: 3
  selector:
    matchLabels:
      app: journee-bd2e6e
  template:
    metadata:
      labels:
        app: journee-bd2e6e
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-bd2e6e
          image: gcr.io/my-docker-471807/journee:bd2e6e-866237
          ports:
            - containerPort: 3000
