k8s/manifests-bd2e6e/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-bd2e6e
  namespace: journee
spec:
  selector:
    app: journee-bd2e6e
  ports:
    - port: 80
      targetPort: 3000
